k8s/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: fe-react

  template:
    metadata:
      labels:
        app: fe-react
    spec:
      containers:
        - name: client
          image: turbothinh/react-dockerized
          ports:
            - containerPort: 80
