k8s/redis-worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-worker-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis-worker

  template:
    metadata:
      labels:
        app: redis-worker
    spec:
      containers:
        - name: redis-worker
          image: turbothinh/redis-worker
          resources:
            limits:
              memory: "256Mi"
              cpu: "2"
