k8s/client.cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: fe-react
  ports:
    - port: 8080
      targetPort: 80
