k8s/server.cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 8081
      targetPort: 8080
