k8s/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 8080 # target to containerPort
      nodePort: 31111 # Dev only. Between 30000 and 32767

  selector:
    deployment: server # Same as on pod label
